finished the server/client demo