@@ -1,7 +1,13 @@
 package com.aliyun.gmsse.server;
 
+import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.security.KeyManagementException;
 import java.security.KeyStore;
 import java.security.KeyStoreException;
@@ -10,18 +16,20 @@ import java.security.cert.CertificateException;
 import java.security.cert.CertificateFactory;
 import java.security.cert.X509Certificate;
 
+import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLContext;
-import javax.net.ssl.SSLSocket;
 import javax.net.ssl.SSLSocketFactory;
 import javax.net.ssl.TrustManagerFactory;
 
 import org.bouncycastle.jce.provider.BouncyCastleProvider;
+import org.junit.Assert;
 
 import com.aliyun.gmsse.GMProvider;
 
 public class ClientTest {
 
-    public static void main(String[] args)  throws NoSuchAlgorithmException, KeyStoreException, CertificateException, IOException, KeyManagementException, InterruptedException {
+    public static void main(String[] args) throws NoSuchAlgorithmException, KeyStoreException, CertificateException,
+            IOException, KeyManagementException, InterruptedException, URISyntaxException {
         GMProvider provider = new GMProvider();
         SSLContext sc = SSLContext.getInstance("TLS", provider);
 
@@ -38,19 +46,25 @@ public class ClientTest {
         sc.init(null, tmf.getTrustManagers(), null);
         SSLSocketFactory ssf = sc.getSocketFactory();
 
-        SSLSocket socket = (SSLSocket)ssf.createSocket("localhost", 8443);
-        socket.getOutputStream().write("hello world!".getBytes());
-        Thread.sleep(1000);
-        // socket.getOutputStream().close();
-        // socket.getInputStream(). write("hello world!".getBytes());
-        // URL serverUrl = new URL("https://localhost:8443/");
+        URI uri = new URI("https://localhost:8443/");
+        // URL serverUrl = new URL("https://sm2only.ovssl.cn/");
+        URL serverUrl = uri.toURL();
+        HttpsURLConnection conn = (HttpsURLConnection) serverUrl.openConnection();
+        conn.setSSLSocketFactory(ssf);
+        conn.setRequestMethod("GET");
+        Assert.assertEquals(200, conn.getResponseCode());
+        Assert.assertEquals("ECC-SM2-WITH-SM4-SM3", conn.getCipherSuite());
 
-        // HttpsURLConnection conn = (HttpsURLConnection) serverUrl.openConnection();
-        // conn.setRequestMethod("GET");
-        // // set SSLSocketFactory
-        // conn.setSSLSocketFactory(ssf);
-        // conn.connect();
-        // Assert.assertEquals(200, conn.getResponseCode());
-        // Assert.assertEquals("ECC-SM2-WITH-SM4-SM3", conn.getCipherSuite());
+        // 读取服务器端返回的内容
+        InputStream connInputStream = conn.getInputStream();
+        InputStreamReader isReader = new InputStreamReader(connInputStream, "utf-8");
+        BufferedReader br = new BufferedReader(isReader);
+        StringBuffer buffer = new StringBuffer();
+        String line = null;
+        while ((line = br.readLine()) != null) {
+            buffer.append(line);
+        }
+        Assert.assertEquals("<!DOCTYPE html>Hi.", buffer.toString());
+        connInputStream.close();
     }
 }
